<resources>
    <string name="app_name">EAT UP</string>
    <string name="get">Get</string>
    <string name="button">Button</string>
    <string name="home" />
    <string name="title_activity_eat_up">EatUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Login</string>
    <string name="eat_up">EAT UP</string>
    <string name="todo">TODO</string>
    <string name="homes">Home</string>
    <string name="continue_without_an_account">Continue without an account</string>
    <string name="register" />
    <string name="registers">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pasta">pasta</string>
    <string name="eat_ups">EAT UP</string>
    <string name="registeredText">Register</string>
    <string name="full_name">Full name</string>
    <string name="registerBtn">Register</string>
    <string name="mail">Mail</string>
    <string name="eat_Up">EAT UP !</string>
    <string name="password">Password</string>
    <string name="already_registered">Already registered</string>
    <string name="loginText">Login</string>
    <string name="loginbtn">LoginBtn</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="logind">Login</string>
    <string name="eatup">EatUP!</string>
    <string name="eat_upss">Eat Up!</string>
    <string name="profile">profile</string>
    <string name="eatupz">EatUP !</string>
    <string name="salad1" />
    <string name="top_recipes" />
    <string name="salad2" />
    <string name="categories" />
    <string name="back">back</string>
    <string name="homez">HOME</string>
    <string name="top_recipesz">Top Recipes</string>
    <string name="search_for_new_recipes">Search for new recipes!</string>
    <string name="categoriesz">Categories</string>
    <string name="peanutfree">PeanutFree</string>
    <string name="peanut">peanut</string>
    <string name="discover_new_and_healthy_recipes">Discover new and healthy recipes</string>
    <string name="hello_julie">Hello Julie,</string>
    <string name="profilez">profile</string>
    <string name="apples_can_reduce_high_levels_of_cholesterol_to_keep_your_heart_healthy">Apples can reduce high levels of cholesterol to keep your heart healthy.</string>
    <string name="health_fact_of_the_day">Health Fact of the day</string>
    <string name="_5_0">5.0</string>
    <string name="picture_of_the_dish">picture of the dish</string>
    <string name="favorite">favorite</string>
</resources>