<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454141"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="411dp"
        android:layout_height="729dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="3dp"
        android:contentDescription="@string/pasta"
        android:src="@drawable/salad3"
        android:tint="#751E1D1D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="UseAppTint,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="240dp"
        android:layout_height="80dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="629dp"
        android:fontFamily="sans-serif"
        android:shadowColor="#467115"
        android:shadowDx="15"
        android:shadowDy="15"
        android:shadowRadius="15"
        android:text="@string/eat_Up"
        android:textAllCaps="true"
        android:textColor="#F1ECEC"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="162dp"
        android:text="@string/loginText"
        android:textColor="#F3EFEF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:autofillHints="no"
        android:backgroundTint="#DAD4D4"
        android:drawableStart="@android:drawable/sym_action_email"
        android:drawablePadding="13dp"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:text="@string/mail"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:autofillHints="no"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="13dp"
        android:hint="@string/full_name"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="#9E9E9E"
        android:textColorHint="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.528"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/logBtn"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="524dp"
        android:layout_marginEnd="161dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/logind"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006" />

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="608dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#B0E670"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>