<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1EFEF"
    tools:context=".activities.MainActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="414dp"
        android:layout_height="729dp"
        android:layout_marginStart="-140dp"
        android:contentDescription="@string/salad1"
        android:tint="#60F8F2F2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/salad"
        tools:ignore="UseAppTint,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="500dp"
        android:text="@string/top_recipesz"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-100dp"
        android:layout_marginBottom="-200dp"
        android:contentDescription="@string/salad2"
        android:tint="#51FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:srcCompat="@drawable/jump"
        tools:ignore="UseAppTint" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="6dp"
        android:background="@null"
        android:elevation="5dp"
        android:imeOptions="actionSearch"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="308dp"
        android:text="@string/categoriesz"

        android:textColor="#C31C1B1B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_category"
        android:layout_width="406dp"
        android:layout_height="204dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textSearchB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/bg_white"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:drawablePadding="5dp"
        android:elevation="5dp"
        android:hint="@string/search_for_new_recipes"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@android:color/transparent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/hellojulie" />

    <TextView
        android:id="@+id/hellojulie"
        android:layout_width="408dp"
        android:layout_height="73dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:background="#E6FBFBFB"
        android:backgroundTint="#F5F6F3"
        android:text="    Hello Julie,"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/discover_new_and_healthy_recipes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="49dp"
        android:layout_height="47dp"
        android:layout_marginStart="336dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_green"
        android:contentDescription="@string/profilez"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="362dp"
        android:layout_height="74dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="11dp"
        android:background="#C8EDE3E3"
        android:backgroundTint="#DDEFE6E6"
        android:fontFamily="casual"
        android:text="@string/apples_can_reduce_high_levels_of_cholesterol_to_keep_your_heart_healthy"
        android:textColor="#E81F10"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:background="#F1EEEE"
        android:text="@string/health_fact_of_the_day"
        android:textColor="#95020202"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSearchB" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_top"
        android:layout_width="374dp"
        android:layout_height="178dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>