<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#454141"
    tools:context=".activities.Welcome">

    <ImageView
        android:id="@+id/side"
        android:layout_width="404dp"
        android:layout_height="594dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/side"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="313dp"
        android:layout_height="354dp"
        android:layout_marginTop="124dp"
        android:layout_marginBottom="413dp"
        android:fontFamily="sans-serif"
        android:rotation="-15"
        android:shadowColor="#070707"
        android:shadowDx="15"
        android:shadowDy="15"
        android:shadowRadius="15"
        android:text="@string/eat_upss"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#EEF1EE"
        android:textSize="130sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043"
        tools:text="Eat UP!" />

    <Button
        android:id="@+id/login"
        android:layout_width="371dp"
        android:layout_height="48dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="544dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="142dp"
        android:background="@drawable/rounded_corner"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="#F2F4F0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="16dp"
        android:text="@string/continue_without_an_account"
        android:textColor="#8CB55E"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="182dp"
        android:text="@string/registers"
        android:textAllCaps="true"
        android:textColor="#F4F0F0"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/go_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

</androidx.constraintlayout.widget.ConstraintLayout>